--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(./mountain.png) no-repeat center;
+    background: url(./background.png) no-repeat center;
     background-attachment: fixed;
     background-size: cover;
     
